- Modified: Removed the ``<f12> M-t`` key binding to Go-specific command
  *pel-go-set-tab-width*.  It was replaced by a globally available ``<f11>
  M-t`` key binding to the *pel-set-tab-width* that has the same behaviour
  but can be used to modify the display rendering of hard tabs in all major modes.
** New Features and Improvements:
- New: Add ability to differentiate ``M-b`` from ``<M-left>`` and ``m-f`` from ``<M-right>`` on
  Emacs running in terminal mode on a macOS Terminal.app application: the
  Terminal.app must be setup to issue the ``Esc Y`` when Option-left is typed
  and ``Esc Z`` when Option-right is typed.  Then the
  *pel-map-meta-left-right-to-Y-Z* user-option must be set to t.  That forces
  PEL to bind ``M-Y`` to what should be bound to ``<M-left>`` and ``M-Z`` to
  what should be bound to ``<M-right>`` simulating the keys.
- New: When *pel-move-window-on-esc-cursor* user-option is t, the four ``ESC <CURSOR>`` keys
  are bound to windmove commands instead of org-meta commands inside the org buffer.
  Previously they were bound to the org-meta commands making navigation out of org buffer
  different than from the other buffers, a surprising behaviour.
- Modified: The *pel-xref-toggle-dumb-jump-mode* command, bound to ``<f11> X B D``,
  now toggle the activation of dumb-jump as a xref back-end inside all buffers
  using the same major-mode instead of only the current buffer as it was doing before.
  The command now accepts a prefix argument; if the command is issued with a prefix
  argument then only the use of dumb-jump as a xref back-end is only toggled
  for the current buffer.
- New: the *pel-set-tab-width* command is now available through the ``<f11>
  M-t`` key sequence to modify the display rendering of hard tabs in text for
  all major modes in the editing session.
- Improved: the *pel-package-info* command identifies and prints the number of Elpa-compliant
  and other packages PEL is able to download and install.