@@ -2,7 +2,7 @@
 
 ;; Created   : Tuesday, September  1 2020.
 ;; Author    : Pierre Rouleau <prouleau001@gmail.com>
-;; Time-stamp: <2021-10-15 21:32:43, updated by Pierre Rouleau>
+;; Time-stamp: <2021-10-20 15:31:28, updated by Pierre Rouleau>
 
 ;; This file is part of the PEL package.
 ;; This file is not part of GNU Emacs.
@@ -318,6 +318,7 @@
     ([f11 ?D]        "drawing"          pel-pkg-for-drawing-markup)
     ([f11 ?D ?u]     "plantuml"         pel-pkg-for-plantuml    plantuml-mode)
     ([f11 ?F]        "frames"           pel-pkg-for-frame       frames)
+    ([f11 ?T]        "time-tracking"    pel-pkg-for-time-tracking timeclock)
     ([f11 ?S]        "sessions"         pel-pkg-for-sessions    desktop)
     ;; ([f11 ?S ?R]
     ([f11 ?X]        "xref"             pel-pkg-for-xref        (cscope
