@@ -20,6 +20,11 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
   M-t`` key binding to the *pel-set-tab-width* that has the same behaviour
   but can be used to modify the display rendering of hard tabs in all major modes.
 ** New Features and Improvements:
+- New: explicit support for time tracking:
+  - New: When the *pel-use-timeclock* user-option is t, the timeclock commands
+    are bound to the ``C-x t`` key prefix.
+    - New: When the *pel-use-timeclock-timelog* is also turned on,an updated
+      version of timelog.el is installed.
 - New: Add ability to differentiate ``M-b`` from ``<M-left>`` and ``m-f`` from ``<M-right>`` on
   Emacs running in terminal mode on a macOS Terminal.app application: the
   Terminal.app must be setup to issue the ``Esc Y`` when Option-left is typed
